DM_NUMBER_CTOR